Add the relevant tables and classes